--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Calculadora</title>
+    <h2>Outra coisa aqui</h2>
 </head>
 <body>
     <h1>Conversão Decimal para Binário</h1>
